--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+*{
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 div > div > div {
     width: 50px;
     height: 50px;
-    background-color: blueviolet;
+    background-color: rgb(138, 43, 226);
     margin: 2px;
 }
 
@@ -20,9 +25,14 @@ body {
     height: 500px;
 }
 #display {
-    min-width: 200px;
+    min-width: 180px;
     height: 60px;
     background-color: aqua;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 10px;
+    font-size: large;
+    border-radius: 20px;
 }
 
 #container {
@@ -35,11 +45,17 @@ body {
     /* gap: 2px; */
 }
 
-#button{
+.button{
     display: flex;
     justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
 .pressed{
-    background-color: rgb(252, 255, 103);
+    background-color: rgb(90, 26, 150);
+}
+
+.hover{
+    filter: brightness(.9);
 }
