--- a/style.css
+++ b/style.css
@@ -3,12 +3,25 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div > div > div {
+.button {
     width: 50px;
     height: 50px;
     background-color: rgb(138, 43, 226);
     margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
+
+.hover{
+    filter: brightness(.9);
+}
+
+.pressed{
+    filter: brightness(.8)
+}
+
 
 body {
     display: flex;
@@ -45,17 +58,6 @@ body {
     /* gap: 2px; */
 }
 
-.button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.pressed{
-    background-color: rgb(205, 152, 255);
-}
-
-.hover{
-    filter: brightness(.9);
+.equals{
+    background-color: rgb(55, 141, 55);
 }
