--- a/style.css
+++ b/style.css
@@ -6,20 +6,22 @@
 .button {
     width: 50px;
     height: 50px;
-    background-color: rgb(138, 43, 226);
+    background-color: rgb(143 144 145);
     margin: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    box-shadow: 0px 1px 2px 0px black;
 }
 
 .hover{
     filter: brightness(.9);
 }
 
-.pressed{
-    filter: brightness(.8)
+div> .pressed{
+    filter: brightness(.8);
+    box-shadow: inset 0px 1px 2px 0px black;
 }
 
 
@@ -36,21 +38,23 @@ body {
 #display {
     min-width: 180px;
     height: 30px;
-    background-color: rgb(192, 255, 255);
+    background-color: rgb(188, 214, 215);
     justify-content: flex-end;
     align-items: center;
     padding: 10px;
     font-size: large;
     border-radius: 10px;
     margin-bottom: 10px;
+    box-shadow: inset 0px 1px 4px 0px #4c4c4c;
 }
 
 #container {
     display: flex;
     flex-direction: column;
     padding: 10px;
-    background-color: rgb(119, 166, 252);
+    background-color: rgb(39 41 46);
     border-radius: 10px;
+    box-shadow: 0px 6px 10px 0px black;
 }
 
 #container > div {
@@ -59,5 +63,18 @@ body {
 }
 
 .equals{
-    background-color: rgb(55, 141, 55);
+    background-color: rgb(61 126 61);
+    width: 105px;
+}
+
+.clear {
+    background-color: rgb(153 69 69);
+}
+
+.backspace{
+    background-color: rgb(146 110 52);
+}
+
+.operator{
+    background-color: rgb(68 95 146);
 }
