--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ body {
     /* margin: auto; */
     /* flex-wrap: wrap;
     width: 200px; */
-    height: 500px;
-    background-color: rgb(242, 242, 227);
+    height: 100vh;
+    background-color: rgb(191 138 55);
+    background-image: linear-gradient(180deg, #fff97a, transparent);
 }
 #display {
     min-width: 180px;
@@ -55,6 +56,7 @@ body {
     background-color: rgb(39 41 46);
     border-radius: 10px;
     box-shadow: 0px 6px 10px 0px black;
+    margin-bottom: 100px;
 }
 
 #container > div {
