--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
     /* flex-wrap: wrap;
     width: 200px; */
     height: 100vh;
-    background-color: rgb(255 117 0);
-    background-image: linear-gradient(180deg, #ffa500, transparent);
+    background-color: rgb(242, 242, 227);
+    /* background-image: linear-gradient(180deg, #ffa500, transparent); */
 }
 #display {
     min-width: 180px;
